--- a/opdracht1/v2/index.html
+++ b/opdracht1/v2/index.html
@@ -1,9 +1,61 @@
-<html>
-  <head></head>
-  <body>
-    <h1>Opdracht 1 - versie 2</h1>
-    <p>
-      Hier komt de HTML van de interactieve demo te staan voor de tweede versie van de eerste opdracht.
-    </p>
-  </body>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="stylesheet" href="styles.css">
+    <title>Vakantiefoto's 2019</title>
+</head>
+
+<body>
+    <header>
+        <nav>
+            <ul>
+                <li class="nav">HOME</li>
+                <li class="nav">PHOTOS</li>
+            </ul>
+        </nav>
+    </header>
+
+
+    <div class="carousel_track-container">
+        <ul class="carousel_track">
+            <li class="carousel_slide">
+                <img src="images/IMG_2219.jpeg" alt="">
+            </li>
+
+            <li class="carousel_slide">
+                <img src="images/IMG_1861.jpeg" alt="">
+            </li>
+
+            <li class="carousel_slide">
+                <img src="images/IMG_2236.jpeg" alt="">
+            </li>
+
+            <li class="carousel_slide">
+                <img src="images/IMG_2219.jpeg" alt="">
+            </li>
+
+
+        </ul>
+    </div>
+
+
+
+    <div class="carousel_nav">
+        <button class="carousel_back">
+                  <img src="images/left-arrow.svg" alt="">
+                  </button>
+
+        <button class="carousel_next">
+                      <img src="images/right-arrow.svg" alt="">
+                  </button>
+    </div>
+
+
+    <script src="slides.js"></script>
+</body>
+
 </html>
