--- a/opdracht3/v1/index.html
+++ b/opdracht3/v1/index.html
@@ -1,15 +1,27 @@
-<html>
-  <head>
-    <title>FvD - Opdracht 3 - Complexe functionaliteit met externe data uitwerken en testen</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-  </head>
-  <body>
-    <main>
-      <h1>Films</h1>
-      <!-- Hier wordt de html geinjecteerd-->
-      <section></section>
-    </main>
+<!DOCTYPE html>
+<html lang="en">
 
-    <script src="script.js"></script>
-  </body>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Mijn film database</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+    <main>
+        <section>
+            <h1>NotNetflix</h1>
+          <p>Click on a movie for more information</p> 
+        </section>
+        <script src="films.js"></script>
+    </main>
+    <footer>
+        <p id="footer">Soula Andrikopoulos | 500736804 | Frontend voor Designers | 2019</p>
+    </footer>
+
+</body>
+
 </html>
