--- a/opdracht3/opdracht 3 versie 4/index.html
+++ b/opdracht3/opdracht 3 versie 4/index.html
@@ -13,21 +13,28 @@
 </head>
 
 <body>
+<!-- Hier wordt de GIF ingeladen wanneer de pagina aan het laden is-->
   <div class="loader">
     <img src="images/Rolling-1s-200px%20kopie.gif" alt="Loading..." />
 </div>
    
     <header>
+       <!-- afbeelding van mijn logo voor de website-->
         <a href="index.html"><img src="https://fontmeme.com/permalink/190611/25db125329121b5e5009197bf14fbac4.png" alt="netflix-font" border="0"></a>
+        
+        <!-- de buttons die gebruikt worden voor de night/daymode, wanneer er geklikt wordt (zie JS) verandert de achtergrondkleur van de section-->
         <button id="daymode"> <img src="images/sunny.png" alt="">Daymode</button>
         <button id="nightmode"> <img src="images/moon.png" alt="">Nightmode</button>
     </header>
+    
     <main>
+       <!-- Hier wordt de Json data ingeladen-->
         <section>
         </section>
         <script src="films.js"></script>
     </main>
     <footer>
+         <!-- Footer met auteur informatie -->
         <p id="footer">Soula Andrikopoulos | 500736804 | Frontend voor Designers | 2019</p>
     </footer>
 
